# sight

./: .gitignore  .gn  BUILD.gn  LICENSE  Makefile  README.md  config-example.json  config.json
examples/: config.json  model.json
src/: main.cpp  module.cpp  module.h  pipeline.cpp  pipeline.h  queue.h  slot.cpp  slot.h  sources.gni
src/input/: dummy.cpp  dummy.h  stream.cpp  stream.h
src/output/: disk.cpp  disk.h  dummy.cpp  dummy.h  http.cpp  http.h
src/processing/: detect.cpp  detect.h  dummy.cpp  dummy.h
src/processing/model/: dummy.cpp  dummy.h  model.cpp  model.h
src/processing/mxnet/: model.cpp  model.h
