# Main build config

target = "sight"
src = "src"

declare_args() {
  enable_pkgconf = true
  debug_build = true
  input_stream = true
  processing_detect = true
  output_disk = true
  output_http = false
}

if (enable_pkgconf) {
  pkgcmd = "//build/pkgconf-wrapper.sh"
  libdep = [
    "gflags",
    "libglog",
    "nlohmann_json",
    "libavformat",
    "libavcodec",
    "libswscale",
    "libavutil",
  ]
  if (input_stream) {
    libdep += [
    ]
  }
  if (processing_detect) {
    libdep += [
    ]
  }
  if (output_disk) {
    libdep += [
    ]
  }
  if (output_http) {
    libdep += [
      "openssl",
    ]
  }
}

executable("$target") {
  sources = [
    "$src/main.cpp",
    "$src/module.cpp",
    "$src/module.h",
    "$src/pipeline.cpp",
    "$src/pipeline.h",
    "$src/queue.h",
    "$src/slot.cpp",
    "$src/slot.h",
    "$src/input/dummy.cpp",
    "$src/input/dummy.h",
    "$src/processing/dummy.cpp",
    "$src/processing/dummy.h",
    "$src/output/dummy.cpp",
    "$src/output/dummy.h",
  ]
  if (input_stream) {
    sources += [
      "$src/input/stream.cpp",
      "$src/input/stream.h",
    ]
  }
  if (processing_detect) {
    sources += [
      "$src/processing/detect.cpp",
      "$src/processing/detect.h",
    ]
  }
  if (output_disk) {
    sources += [
      "$src/output/disk.cpp",
      "$src/output/disk.h",
    ]
  }
  if (output_http) {
    sources += [
      "$src/output/http.cpp",
      "$src/output/http.h",
    ]
  }

  cflags = [
    "-fPIC",
    "-pthread",
  ]
  if (debug_build) {
    cflags += [
      "-O0",
      "-g",
    ]
  } else {
    cflags += [
      "-O2",
    ]
  }
  if (enable_pkgconf) {
    cflags += exec_script("$pkgcmd", ["--cflags"] + libdep, "list lines")
  } else {
    cflags += [
    ]
  }

  ldflags = [
    "-lpthread",
  ]
  if (debug_build) {
    ldflags += [
      # "-fsanitize=thread",
      # "-fsanitize=memory",
      # "-fsanitize=address",
      "-fsanitize=undefined",
    ]
  }
  if (enable_pkgconf) {
    ldflags += exec_script("$pkgcmd", ["--libs"] + libdep, "list lines")
  } else {
    ldflags += [
      "-lgflags",
      "-lglog",
      "-lavformat",
      "-lavcodec",
      "-lswscale",
      "-lavutil",
    ]
    if (input_stream) {
      ldflags += [
      ]
    }
    if (processing_detect) {
      ldflags += [
      ]
    }
    if (output_disk) {
      ldflags += [
      ]
    }
    if (output_http) {
      ldflags += [
        "-lcrypto",
        "-lssl",
      ]
    }
  }

  defines = [
    "VERSION=1.0",
  ]
  if (debug_build) {
    defines += [
      "DEBUG",
    ]
  }
  if (input_stream) {
    defines += [
      "INPUT_STREAM",
    ]
  }
  if (processing_detect) {
    defines += [
      "PROCESSING_DETECT",
    ]
  }
  if (output_disk) {
    defines += [
      "OUTPUT_DISK",
    ]
  }
  if (output_http) {
    defines += [
      "OUTPUT_HTTP",
    ]
  }

  include_dirs = [
    "src",
  ]
}
